--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3.7'
 
 services:
-  web-mate:
+  web-airport:
     restart: always
     build: .
-    container_name: backend_mate_movie
+    container_name: backend_airport
     command: ["/entrypoint.sh"]
     env_file:
       - .env
@@ -13,26 +13,25 @@ services:
     volumes:
       - .:/usr/src/app
     networks:
-      - mate_movie_network
+      - airport_network
     depends_on:
       - db
 
   db:
     image: 'postgres:latest'
-    container_name: postgres_mate_movie
+    container_name: postgres_airport
     env_file:
       - .env
     ports:
       - "5433:5432"
     volumes:
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-      - mate_movie_data:/var/lib/postgresql/data/
+      - airport_data:/var/lib/postgresql/data/
     networks:
-      - mate_movie_network
+      - airport_network
 
   pgadmin:
     image: dpage/pgadmin4
-    container_name: pgadmin_mate_movie
+    container_name: pgadmin_airport
     ports:
       - "3333:80"
     env_file:
@@ -42,17 +41,16 @@ services:
     depends_on:
       - db
     volumes:
-      - mate_pgadmin_data:/var/lib/pgadmin
+      - airport_pgadmin_data:/var/lib/pgadmin
     networks:
-      - mate_movie_network
+      - airport_network
 
 networks:
-  mate_movie_network:
+  airport_network:
     driver: bridge
 
 volumes:
-  mate_movie_data:
+  airport_data:
     driver: local
-  mate_pgadmin_data:
+  airport_pgadmin_data:
     driver: local
-
